@@ -45,7 +45,8 @@ DSOURCES = \
 
 # Keep this in the same order as the LPARTS variable in makemake.in !
 LISPSOURCES = init defseq backquote defmacro macros1 macros2 defs1 \
-              timezone places floatprint type subtypep defstruct format \
+              timezone places floatprint defpackage type subtypep \
+              defstruct format \
               international savemem trace cmacros compiler defs2 loop clos \
               clos-class1 clos-class2 clos-class3 clos-class4 clos-class5 \
               clos-slots1 clos-slots2 \
