@@ -1,3 +1,12 @@
+2004-04-23  Bruno Haible  <bruno@clisp.org>
+
+	Make DEFPACKAGE available earlier during bootstrap.
+	* defpackage.lisp: New file, extracted from defs2.lisp.
+	* defs2.lisp (defpackage): Remove macro.
+	* init.lisp: Load defpackage.
+	* makemake.in (LPARTS): Add defpackage.
+	* po/Makefile.devel (LISPSOURCES): Add defpackage.
+
 2004-04-28  Bruno Haible  <bruno@clisp.org>
 
 	* genclisph.d (main) [TYPECODES]: Emit consp, atomp, mconsp, matomp
